! Fixed signatures not showing up in soft-merged posts. (Subs-Template.php)
! And, err... Fixed signatures not showing up, like, anywhere. Silly typo. (macros.xml)

* A few CSS tweaks: .bbc_img should have some margin around them, and left/right-aligned images should modify them accordingly. Needs testing, especially with img.center possibly conflicting with .bbc_img, but I don't think it will... Fixed letter-spacing in Chrome (latest versions seem to finally be using DirectWrite, so...), and improved background color of code blocks. (index.css)

- Since Firefox 2 hasn't been supported for a long time in Wedge, there's no need for hacks targeted to it, really. (common.css)

- Saving a few bytes of CSS in Chrome. (sections.css)

--- a/Themes/default/skins/common.css
+++ b/Themes/default/skins/common.css
@@ -9,18 +9,13 @@
 	NOTE: avoid including url() files here, prefer raw-url() instead!
 -------------------------------------------------------------------------- */
 
-// A common inline-block hack (for old IE/Firefox compatibility.)
+// A common inline-block hack (for old IE compatibility.)
 @mixin .inline-block
-
-	// Firefox 2.x doesn't support inline-block.
-	@if firefox[-2]
-		display: -moz-inline-box
-	@endif
 
 	display: inline-block
 	vertical-align: middle
 
-	// IE6/7 need layout to show inline-block divs... And a default right margin from my experience...
+	// IE6/7 need layout to enable inline-block on a block element... And a default right margin, from my experience.
 	@if ie[-7]
 		margin-right: 6px
 		zoom: 1
@@ -105,7 +100,7 @@
 		background-repeat: no-repeat
 	@endif
 
-/* Common and helper variable.
+/* Common and helper variables.
 ------------------------------------------------------- */
 
 /*
